--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         .blue-text{
             color:dodgerblue;
         }
-        li.white  {
+        li.white +li {
             background-color: blue;
         }
     </style>
