--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,8 @@
         .blue-text{
             color:dodgerblue;
         }
-        li.white + li {
-            background-color: blue;
+        li.white {
+            background-color: green;
         }
     </style>
 </head>
